--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </section>
 
   </div>
-  <script src="game.js"></script>
+  <script src="walletClass.js"></script>
+  <script src="gameClass.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
