--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   </div>
   <script src="walletClass.js"></script>
+  <script src="StatisticsClass.js"></script>
   <script src="gameClass.js"></script>
   <script src="main.js"></script>
 </body>
