added DrawClass and some fix

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     </section>
 
   </div>
-  <script src="walletClass.js"></script>
-  <script src="StatisticsClass.js"></script>
-  <script src="gameClass.js"></script>
+  <script src="js/WalletClass.js"></script>
+  <script src="js/StatisticsClass.js"></script>
+  <script src="js/DrawClass.js"></script>
+  <script src="js/GameClass.js"></script>
   <script src="main.js"></script>
 </body>
 
