--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <script src="js/WalletClass.js"></script>
   <script src="js/StatisticsClass.js"></script>
   <script src="js/DrawClass.js"></script>
+  <script src="js/ResultClass.js"></script>
   <script src="js/GameClass.js"></script>
   <script src="main.js"></script>
 </body>
