created method start in GameClass and fix program

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <script src="js/DrawClass.js"></script>
   <script src="js/ResultClass.js"></script>
   <script src="js/GameClass.js"></script>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
