--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
 
     <section class="play">
-      <input type="number" placeholder="Podaj stawkę" id="bid">
+      <input type="number" placeholder="Enter your stake ..." id="bid">
       <button id="start">Spin!</button>
     </section>
 
